--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -346,3 +346,34 @@
   ]
 }
 {% endschema %}
+
+<style>
+  h1.collection-hero__title {
+    text-align: center;
+    padding: 10px 20px;
+    background: #1947ba;
+    display: inline-block;
+    text-transform: uppercase;
+}
+  .card__heading a{
+    font-family: 'Akira Expanded';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 19px;
+    line-height: 40px;
+    color: #FFFFFF;
+  }
+
+  .price-card{
+    font-family: 'Akira Expanded';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 19px;
+    line-height: 40px;
+    color: #FFFFFF;
+  
+  }
+  .card__information{
+    padding:0 !important;
+  }
+</style>
