--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -154,7 +154,7 @@
                 {{ card_product.title | escape }}
               </a>
             </h3>
-           <p> {{ card_product.price | money }}</p>
+           <p class="price-card"> {{ card_product.price | money }}</p>
           </div>
 
           <div class="card-information">
