--- a/sections/contact-form-w.liquid
+++ b/sections/contact-form-w.liquid
@@ -18,13 +18,9 @@
   <div class="container">
    <div class="row">
 
-    <div class="col-lg-6">
+    <div class="col-lg-8 offset-md-2">
       <div class="contact  section-{{ section.id }}-padding">
-        {%- if section.settings.heading != blank -%}
-          <h2 class="title title-wrapper--no-top-margin {{ section.settings.heading_size }}">{{ section.settings.heading | escape }}</h2>
-        {%- else -%}
-          <h2 class="visually-hidden">{{ 'templates.contact.form.title' | t }}</h2>
-        {%- endif -%}
+
         {%- form 'contact', id: 'ContactForm', class: 'isolate' -%}
           {%- if form.posted_successfully? -%}
             <h2 class="form-status form-status-list form__message" tabindex="-1" autofocus>{% render 'icon-success' %} {{ 'templates.contact.form.post_success' | t }}</h2>
@@ -79,6 +75,10 @@
         
 
           </div>
+          <div class="field">
+            <input class="field__input" autocomplete="name" type="text" id="ContactForm-namea" name="contact[Website Url]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
+            <label class="field__label" for="ContactForm-namea">Website Url</label>
+          </div>
 
           <div class="field">
             <textarea
@@ -92,10 +92,7 @@
             </textarea>
             <label class="form__label field__label" for="ContactForm-body">Message</label>
           </div>
-          <div class="field">
-            <input class="field__input" autocomplete="name" type="text" id="ContactForm-namea" name="contact[{{ 'templates.contact.form.name' | t }}]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
-            <label class="field__label" for="ContactForm-namea">{{ 'templates.contact.form.name' | t }}</label>
-          </div>
+
           <div class="contact__button">
             <button type="submit" class="button contact-btn">
               {{ 'templates.contact.form.send' | t }}
@@ -108,20 +105,7 @@
         {%- endform -%}
       </div>
     </div>
-    <div class="col-lg-6">
-       <div class="contact-left-content">
-          <div class="singel-content">
-             <h3>{{ section.settings.h3 }}</h3>
-             <p> <a href="{{ section.settings.email }}"> Email : {{ section.settings.email }} </a></p>
-             <p>  <a href="{{ section.settings.phone }}"> Phone : {{ section.settings.phone }}  </a></p>
-          </div>
-          <div class="singel-content">
-             <h3>{{ section.settings.h32 }}</h3>
-             <p>  {{ section.settings.details }}</p>
-      
-          </div>
-      </div>
-    </div>
+   
   </div>
   </div>
 </div>
