--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -11,7 +11,7 @@
 
 <div class="collection-hero{% if section.settings.show_collection_image and collection.image %} collection-hero--with-image{% endif %} color-{{ section.settings.color_scheme }} gradient">
   <div class="collection-hero__inner page-width">
-    <div class="collection-hero__text-wrapper">
+    <div class="collection-hero__text-wrapper text-center">
       <h1 class="collection-hero__title">
         <span class="visually-hidden">{{ 'sections.collection_template.title' | t }}: </span>
         {{- collection.title | escape -}}
@@ -96,3 +96,6 @@
   ]
 }
 {% endschema %}
+
+
+
