--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -156,7 +156,7 @@
             </h3>
            <p class="price-card"> {{ card_product.price | money }}</p>
           </div>
-
+           <h4> {{ card_product.metafields.descriptors.subtitle }}</h4>
           <div class="card-information">
       
 
@@ -452,3 +452,7 @@
     }
   }
 </script>
+
+
+
+
