--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -26,15 +26,15 @@
           {%- case block.type -%}
             {%- when 'heading' -%}
               <h2 class="rich-text__heading rte {{ block.settings.heading_size }}" {{ block.shopify_attributes }}>
-                {{ block.settings.heading | replace: 'p>', 'span>' }}
+                <a href="{{ block.settings.url }}">{{ block.settings.heading | replace: 'p>', 'span>' }}</a>
               </h2>
             {%- when 'caption' -%}
               <p class="rich-text__caption {{ block.settings.text_style }} {{ block.settings.text_style }}--{{ block.settings.text_size }}" {{ block.shopify_attributes }}>
-                {{ block.settings.caption | escape }}
+                <a href="{{ block.settings.url }}">  {{ block.settings.caption | escape }} </a>
               </p>
             {%- when 'text' -%}
               <div class="rich-text__text rte" {{ block.shopify_attributes }}>
-                {{ block.settings.text }}
+                <a href="{{ block.settings.url }}">  {{ block.settings.text }} </a>
               </div>
             {%- when 'button' -%}
               <div class="rich-text__buttons{% if block.settings.button_label != blank and block.settings.button_label_2 != blank %} rich-text__buttons--multiple{% endif %}" {{ block.shopify_attributes }}>
@@ -171,6 +171,11 @@
           "label": "t:sections.rich-text.blocks.heading.settings.heading.label"
         },
         {
+          "type": "url",
+          "id": "url",
+          "label": "Please Put you Url"
+        },
+        {
           "type": "select",
           "id": "heading_size",
           "options": [
@@ -206,6 +211,11 @@
           "id": "caption",
           "default": "Add a tagline",
           "label": "t:sections.rich-text.blocks.caption.settings.text.label"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "Please Put you Url"
         },
         {
           "type": "select",
@@ -255,6 +265,11 @@
           "id": "text",
           "default": "<p>Share information about your brand with your customers. Describe a product, make announcements, or welcome customers to your store.</p>",
           "label": "t:sections.rich-text.blocks.text.settings.text.label"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "Please Put you Url"
         }
       ]
     },
