theme slider update

--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -334,3 +334,37 @@
   ]
 }
 {% endschema %}
+
+
+<style>
+
+.rich-text__heading  a span{
+  font-family: 'Akira Expanded';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 45px;
+  line-height: 25px;
+  /* identical to box height */
+  
+  
+  color: #FFFFFF;
+}
+.rich-text__blocks {
+  max-width: 120rem;
+}
+
+
+
+.rich-text__text a p{
+  font-family: 'Helvetica Neue';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 49px;
+  /* identical to box height */
+  
+  text-decoration-line: underline;
+  
+  color: #FFFFFF;
+}
+</style>
