--- a/sections/contact-form-w.liquid
+++ b/sections/contact-form-w.liquid
@@ -128,21 +128,192 @@
                   <div class="fielda">
                     <select id="request-county" name="contact[request_Country]">
                       <option>Select Your Country</option>
-                      <option>Shipping</option>
-                      <option>Custom order</option>
-                      <option>Other</option>
+                      <option value="ae" data-validate="false">United Arab Emirates</option>
+                      <option value="ar" data-validate="false">Argentina
+                      </option>
+                      <option value="at" data-validate="false">Austria
+                      </option>
+                      <option value="au" data-validate="false">Australia
+                      </option>
+                      <option value="be" data-validate="false">Belgium
+                      </option>
+                      <option value="bg" data-validate="false">Bulgaria
+                      </option>
+                      <option value="bm" data-validate="false">Bermuda
+                      </option>
+                      <option value="br" data-validate="false">Brazil
+                      </option>
+                      <option value="bs" data-validate="false">Bahamas
+                      </option>
+                      <option value="by" data-validate="false">Belarus
+                      </option>
+                      <option value="bz" data-validate="false">Belize
+                      </option>
+                      <option value="ca" data-validate="false">Canada
+                      </option>
+                      <option value="ch" data-validate="false">Switzerland
+                      </option>
+                      <option value="cl" data-validate="false">Chile
+                      </option>
+                      <option value="cn" data-validate="false">China
+                      </option>
+                      <option value="co" data-validate="false">Colombia
+                      </option>
+                      <option value="cr" data-validate="false">Costa Rica
+                      </option>
+                      <option value="cz" data-validate="false">Czech Republic
+                      </option>
+                      <option value="de" data-validate="false">Germany
+                      </option>
+                      <option value="dk" data-validate="false">Denmark
+                      </option>
+                      <option value="do" data-validate="false">Dominican Republic 
+                      </option>
+                      <option value="ee" data-validate="false">Estonia
+                      </option>
+                      <option value="es" data-validate="false">Spain
+                      </option>
+                      <option value="fi" data-validate="false">Finland
+                      </option>
+                      <option value="fr" data-validate="false">France
+                      </option>
+                      <option value="gb" data-validate="false">United Kingdom
+                      </option>
+                      <option value="gg" data-validate="false">Guernsey
+                      </option>
+                      <option value="gh" data-validate="false">Ghana
+                      </option>
+                      <option value="gr" data-validate="false">GREECE
+                      </option>
+                      <option value="gu" data-validate="false">Guam
+                      </option>
+                      <option value="hk" data-validate="false">Hong Kong
+                      </option>
+                      <option value="hr" data-validate="false">Croatia
+                      </option>
+                      <option value="ht" data-validate="false">Haiti
+                      </option>
+                      <option value="hu" data-validate="false">Hungary
+                      </option>
+                      <option value="id" data-validate="false">Indonesia
+                      </option>
+                      <option value="ie" data-validate="false">Ireland
+                      </option>
+                      <option value="il" data-validate="false">Israel
+                      </option>
+                      <option value="im" data-validate="false">Isle of Man
+                      </option>
+                      <option value="in" data-validate="false">India
+                      </option>
+                      <option value="is" data-validate="false">Iceland
+                      </option>
+                      <option value="it" data-validate="false">Italy
+                      </option>
+                      <option value="je" data-validate="false">Jersey
+                      </option>
+                      <option value="jp" data-validate="false">Japan
+                      </option>
+                      <option value="kr" data-validate="false">South Korea
+                      </option>
+                      <option value="kw" data-validate="false">Kuwait
+                      </option>
+                      <option value="lt" data-validate="false">Lithuania
+                      </option>
+                      <option value="lu" data-validate="false">Luxembourg
+                      </option>
+                      <option value="lv" data-validate="false">Latvia
+                      </option>
+                      <option value="ma" data-validate="false">Morocco
+                      </option>
+                      <option value="mc" data-validate="false">Monaco
+                      </option>
+                      <option value="md" data-validate="false">Moldova
+                      </option>
+                      <option value="me" data-validate="false">Montenegro
+                      </option>
+                      <option value="mo" data-validate="false">Macao
+                      </option>
+                      <option value="mt" data-validate="false">Malta
+                      </option>
+                      <option value="mx" data-validate="false">Mexico
+                      </option>
+                      <option value="my" data-validate="false">Malaysia
+                      </option>
+                      <option value="nl" data-validate="false">Netherlands
+                      </option>
+                      <option value="no" data-validate="false">Norway
+                      </option>
+                      <option value="nz" data-validate="false">New Zealand
+                      </option>
+                      <option value="om" data-validate="false">Oman
+                      </option>
+                      <option value="pa" data-validate="false">Panama
+                      </option>
+                      <option value="pe" data-validate="false">Peru
+                      </option>
+                      <option value="ph" data-validate="false">Phillippines
+                      </option>
+                      <option value="pk" data-validate="false">Pakistan
+                      </option>
+                      <option value="pl" data-validate="false">Poland
+                      </option>
+                      <option value="pr" data-validate="false">Puerto Rico
+                      </option>
+                      <option value="pt" data-validate="false">Portugal
+                      </option>
+                      <option value="qa" data-validate="false">Qatar
+                      </option>
+                      <option value="re" data-validate="false">Reunion
+                      </option>
+                      <option value="ro" data-validate="false">Romania
+                      </option>
+                      <option value="rs" data-validate="false">Serbia
+                      </option>
+                      <option value="ru" data-validate="false">Russia
+                      </option>
+                      <option value="sa" data-validate="false">Saudi Arabia
+                      </option>
+                      <option value="se" data-validate="false">Sweden
+                      </option>
+                      <option value="sg" data-validate="false">Singapore
+                      </option>
+                      <option value="si" data-validate="false">Slovenia
+                      </option>
+                      <option value="sk" data-validate="false">Slovakia
+                      </option>
+                      <option value="sr" data-validate="false">Suriname 
+                      </option>
+                      <option value="th" data-validate="false">Thailand
+                      </option>
+                      <option value="tr" data-validate="false">Turkey
+                      </option>
+                      <option value="tt" data-validate="false">Trinidad
+                      </option>
+                      <option value="tw" data-validate="false">TAIWAN
+                      </option>
+                      <option value="ua" data-validate="false">Ukraine
+                      </option>
+                      <option value="us" data-validate="false" selected="">United States
+                      </option>
+                      <option value="uy" data-validate="false">Uruguay
+                      </option>
+                      <option value="ve" data-validate="false">Venezuela
+                      </option>
+                      <option value="vt" data-validate="false">Vietnam
+                      </option>
+                      <option value="wi" data-validate="false">West Indies
+                      </option>
+                      <option value="xk" data-validate="false">Kosovo
+                      </option>
+                      <option value="za" data-validate="false">South Africa
+                      </option>
                     </select>
                    </div>
 
-                  <div class="fielda">
-                    <select id="request-province" name="contact[request_Province]">
-                      <option>Select Your Province</option>
-                      <option>Returns</option>
-                      <option>Shipping</option>
-                      <option>Custom order</option>
-                      <option>Other</option>
-                    </select>
-                   </div>
+                   <div class="field">
+                    <input class="field__input" type="text" id="custom-City" name="contact[Province]" placeholder="*City:">
+                    <label class="field__label" for="custom-City">*Your State or Province:</label>
+                  </div>
 
                 </div>
 
@@ -235,7 +406,7 @@
                     <div class="field">
          
                       <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[{{ 'templates.contact.form.name' | t }}]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
-                      <label class="field__label" for="ContactForm-name">*F name:</label>
+                      <label class="field__label" for="ContactForm-name">*First name:</label>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -317,7 +488,7 @@
                       <p>By proceeding I acknowledge that I have read and agree to the following terms and conditions</p>
                       
 
-                      <textarea rows="8"  disabled placeholder="Describe yourself here..sadfsadf.  The parties agree that any transaction(s) governed by these terms and conditions shall be governed by the laws of the State of California, without regard to any applicable choice of law rules, standards, or norms. By agreeing to transact with Seller, Buyer and any Guarantor hereby consent to jurisdiction in Los Angeles County, California. NO EXPRESS WARRANTIES: BUYER ACKNOWLEDGES THAT SELLER HAS MADE NO EXPRESS WARRANTIES. EXCLUSION OF IMPLIED WARRANTIES: NOTWITHSTANDING ANY OTHER STATEMENTS, AGREEMENTS, OR UNDERSTANDINGS INVOLVING BUYER AND SELLER OR ANY OF ITS RESPECTIVE EMPLOYEES OR AGENTS, OR GUARANTOR, TO THE FULLEST EXTENT PERMITTED UNDER APPLICABLE LAW, SELLER SHALL NOT HAVE OR INCUR ANY IMPLIED WARRANTIES OF MERCHANTABILITY OR FITNESS FOR PARTICULAR PURPOSE, AND ALL SUCH WARRANTIES ARE EXPRESSLY DISCLAIMED. ALL OTHER WARRANTIES IMPLIED ARE EXCLUDED FROM ANY TRANSACTION BETWEEN BUYER AND SELLER AND SHALL NOT APPLY TO THE GOODS SOLD BY SELLER. SELLER SHALL ALSO NOT BE LIABLE FOR ANY SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES. NONE OF SELLER'S AGENTS, EMPLOYEES, PROFESSIONALS, OR OTHER REPRESENTATIVES HAVE OR SHOULD BE CONSIDERED TO HAVE AUTHORITY TO ALTER THE TERMS OF THIS PROVISION. No Responsibility: Buyer acknowledges that Seller has no responsibility for any work performed by any vendor referred by Buyer and hereby waives any right to assert any claim against Seller for work performed by any other firm, including but not limited to claims for negligent referral, agency, or respondeat superior. Deterioration of Buyer's Credit: Seller's agreement to provide a Buyer with goods or services prior to payment is purely at Seller's discretion, and may be altered, conditioned, or revoked at any time, and without notice. Acceptance of goods with known defects waives claims for damage : To induce Seller to consider selling goods to Buyer whether on credit or otherwise, the individual(s) or entity(ies) signing these Terms and Conditions under the heading Guarantor' (who, if more than one, shall be jointly and severally bound) hereby unconditionally guarantee(s) to Seller and its affiliates, successors, endorsees, and assigns, the punctual payment and performance when due, with such interest as may accrue thereon either before or after any maturity(ies) thereof, of all debts, indemnities, and other obligations of Buyer and any other party or parties, now existing or hereafter arising, as well as the performance and observance by the Buyer of the terms, conditions, stipulations, and agreements of Buyer contained in these Terms and Conditions and any invoice, credit application, and/or order confirmation of Seller. This Guaranty will be a continuing and irrevocable guaranty for such indebtedness and obligations of Buyer. The undersigned Guarantor hereby waives notice of acceptance of this Guaranty, notice of the occurrence of any default, presentments, demand, protests, and notices of any and all action at any time taken or omitted by Buyer regarding its indebtedness to Seller. Such Guarantor consents to any modification or renewal of the credit or other relationship between Buyer and Seller, including increases in rates or fees, and changes to the dates specified for payment, all of which will remain hereby guaranteed. This Guaranty shall bind the executors, administrators, and assigns of the undersigned Guarantor and shall remain in full force and effect unless and until canceled by written notice sent by Seller to Buyer by registered mail, in which case it shall then be binding as to any balances, amounts and other obligations then owing and outstanding as of the date of Buyer's receipt of such registered notice"></textarea>
+                      <textarea rows="8"  disabled placeholder="{{ section.settings.agreedet }}"></textarea>
                     </div>
                 </div>
               </div>
@@ -325,7 +496,7 @@
             {% comment %} start  {% endcomment %}
             <div class="fieldb radio-buttons">
               <input type="radio" name="contact[contact_method]" value="email" id="contact-method">
-              <label for="contact-method">i agree with the terms and conditions</label>
+              <label for="contact-method">{{ section.settings.agree }}</label>
               
              
             </div>
@@ -479,10 +650,17 @@
     },
     {
       "type": "text",
-      "id": "details",
-      "label": "Location details",
-      "default": "10001 Pioneer Blvd. Santa Fe Springs, CA 90670",
-      "placeholder": "10001 Pioneer Blvd. Santa Fe Springs, CA 90670"
+      "id": "agreedet",
+      "label": "The parties agree that .....",
+      "default": "The parties agree that any transaction(s) cable choice",
+      "placeholder": "The parties agree that ......"
+    },
+    {
+      "type": "text",
+      "id": "agree",
+      "label": "agree with the terms and conditions",
+      "default": "i agree with the terms and conditions",
+      "placeholder": "i agree with the terms and conditions"
     }
   ],
   "presets": [
