theme from update with zip update

--- a/sections/contact-form-w.liquid
+++ b/sections/contact-form-w.liquid
@@ -113,7 +113,7 @@
 
                 <div class="col-md-6">
                   <div class="field">
-                    <input class="field__input" type="number" id="custom-postal" name="contact[Postal]" placeholder="Custom Question" required>
+                    <input class="field__input" type="text" id="custom-postal" name="contact[Postal]" placeholder="Custom Question" required>
                     <label class="field__label" for="custom-postal">*Postal / Zip Code:</label>
                   </div>
                   <div class="field">
@@ -699,6 +699,9 @@ option {
 }
 h3{
  margin: 20px 0;
+}
+h2{
+color:#fff;
 }
 .fieldb{
  margin: 20px 0;
